update: all js project structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hitch - 2D Game</title>
-        <!-- importa todo o nosso css -->
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!-- define o elemento utilizado no jogo -->
         <div id="game">
             <canvas id="canvas" width="400" height="400"></canvas>
         </div>
 
-        <!-- importa todo o nosso javascript -->
-        <script type="module" src="js/game.js"></script>
+        <script type="module" src="js/game/game.js"></script>
     </body>
 </html>
